--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <nav>
                     <ul>
                         <li><a href="">About Us</a></li>
-                        <li><a href="">...</a></li>
+                        <li><a href="">Album</a></li>
                         <li><a href="">...</a></li>
                         <li><a href="">Liên Hệ</a></li>
                     </ul>
