--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <nav>
                     <ul>
                         <li><a href="">About Us</a></li>
+                        <li><a href="">Couple</a></li>
                         <li><a href="">Album</a></li>
-                        <li><a href="">...</a></li>
                         <li><a href="">Liên Hệ</a></li>
                     </ul>
                 </nav>
@@ -106,8 +106,45 @@
                 <img src="/img/couple4.JPG" alt="">
             </div>
         </div>
-        
      </section>
+     <!-- Footer  -->
+      <footer>
+        <div class="footer-contact">
+            <div class="section-title">
+                <h1> Contact </h1>
+            </div>
+            <div class="row">
+                <div class="contact-TH">
+                    <ul>
+                        <li><i class="ti-email"></i>dothanhtrung3112@gmail.com</li>
+                        <li><i class="ti-facebook"></i><a href="https://www.facebook.com/">Thành Trung</a></li>
+                        <li><i class="ti-instagram"></i><a href="https://www.instagram.com/">_dothanhtrung</a></li>
+                    </ul>
+                </div>
+                <div class="contact-TH">
+                    <ul>
+                        <li><i class="ti-email"></i>buiphuonghuyen1607@gmail.com</li>
+                        <li><i class="ti-facebook"></i><a href="https://www.facebook.com/profile.php?id=100051666106002">Phương Huyền</a></li>
+                        <li><i class="ti-instagram"></i><a href="https://www.instagram.com/huyennphuongbui/">
+                            huyennphuongbui</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-menu">
+            <ul>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Couple</a></li>
+                <li><a href="">Album</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Login</a></li>
+
+            </ul>
+        </div>
+        <div class="copyright">
+            @2024 Bản quyền thuộc về Thành Trung
+        </div>
+      </footer>
      <script src="main.js"></script>
 </body>
 
