--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="reponsive.css">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
     <header>
         <div class="container">
             <div class="row">
+                <i class="ti-menu"></i>
                 <a href=""><img class="logo1" src="/img/TandH.png" alt=""></a>
 
                 <nav>
@@ -75,7 +77,7 @@
                         </div>
                         <div class="inf-top1">
                             <i class="ti-github"></i>
-                            <img src="/img/Huyen.JPG" alt="">
+                            <img src="/img/Huyen-New.JPG" alt="">
                             <h2>Bùi Thị Phương Huyền</h2>
                             <h4>Học Viện Tòa Án</h4>
                             <h4> Cử nhân Luật </h4>
@@ -94,11 +96,12 @@
         </div>
     </section>
     <!-- Couple -->
-     <section class="Couple">
+    <section class="Couple">
         <div class="container">
             <div class="section-title">
                 <h1> Couple </h1>
             </div>
+            <div class="row"></div>
             <div class="couple-img">
                 <img src="/img/couple1.JPG" alt="">
                 <img src="/img/couple2.JPG" alt="">
@@ -106,9 +109,9 @@
                 <img src="/img/couple4.JPG" alt="">
             </div>
         </div>
-     </section>
-     <!-- Footer  -->
-      <footer>
+    </section>
+    <!-- Footer  -->
+    <footer>
         <div class="footer-contact">
             <div class="section-title">
                 <h1> Contact </h1>
