--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 </div>
                 <div class="contact-TH">
                     <ul>
-                        <li><i class="ti-email"></i>buiphuonghuyen1607@gmail.com</li>
+                        <li><i class="ti-email"></i>Btph2001@gmail.com</li>
                         <li><i class="ti-facebook"></i><a href="https://www.facebook.com/profile.php?id=100051666106002">Phương Huyền</a></li>
                         <li><i class="ti-instagram"></i><a href="https://www.instagram.com/huyennphuongbui/">
                             huyennphuongbui</a></li>
