--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         <li><a href="">Liên Hệ</a></li>
                     </ul>
                 </nav>
-                <i class="ti-heart-broken"></i>
+                <a href="/login.html"><i class="ti-heart-broken"></i></a>
             </div>
         </div>
     </header>
